[gd_scene load_steps=4 format=2]

[ext_resource path="res://Recursos/Sprites/Minigames/Voto Impresso/Urna eletronica.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Scripts de Minigames/Voto Impresso/Urna.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Musicas/confirmation_001.ogg" type="AudioStream" id=3]

[node name="Urna" type="Node2D"]
script = ExtResource( 2 )

[node name="UrnaEletronica" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -3, -3 )
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 140, 65 )
rotation = -3.14159
polygon = PoolVector2Array( 269, 0, 0, 0, 14, 124, 254, 124 )

[node name="Som_colisao_voto" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.27

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
